@@ -1,4 +1,6 @@
 ver 0.21.10 (not yet released)
+* decoder
+  - opus: fix duplicate tags
 * output
   - httpd: reject some well-known URIs
 * fix crash bug (0.21.9 regression)
